--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "ShortURL",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "connect-flash": "^0.1.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.1",
-    "express-handlebars": "^6.0.5",
-    "express-session": "^1.17.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.3.1",
-    "nodemon": "^2.0.16",
-    "valid-url": "^1.0.9"
-  }
+	"name": "ShortURL",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"connect-flash": "^0.1.1",
+		"dotenv": "^16.0.0",
+		"express": "^4.18.1",
+		"express-handlebars": "^6.0.5",
+		"express-session": "^1.17.2",
+		"method-override": "^3.0.0",
+		"mongoose": "^6.3.1",
+		"nodemon": "^2.0.16",
+		"valid-url": "^1.0.9"
+	},
+	"devDependencies": {
+		"eslint": "^8.16.0"
+	}
 }
